--- a/app/front/bower.json
+++ b/app/front/bower.json
@@ -1,8 +1,25 @@
 {
-  "name": "your-app",
-  "version": "0.0.1",
-  "main": "public/app.js",
+  "name": "example-app",
+  "version": "0.1.0",
+  "main": "public/javascripts/app.js",
   "dependencies": {
+    "chaplin": "~1.0.0",
+    "console-polyfill": "~0.1.0",
+    "lodash": "~1.3.1",
+    "jquery": "~2.0.2",
+    "normalize-css": "~2.1.2",
+    "h5bp-helpers": "~0.1.0",
+    "jquery-mockjax": "~1.5.0",
+    "moment": "~2.1.0",
+    "pure": "~0.4.2"
   },
-  "overrides": {}
+  "overrides": {
+    "backbone": {
+      "dependencies": {
+        "lodash": "*",
+        "jquery": "*"
+      },
+      "main": "backbone.js"
+    }
+  }
 }
