--- a/app/front/package.json
+++ b/app/front/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "your-app",
-  "description": "Description",
   "author": "Your Name",
+  "name": "package-name",
+  "description": "Package description",
   "version": "0.0.1",
+  "homepage": "",
   "repository": {
     "type": "git",
     "url": ""
@@ -12,14 +13,17 @@
     "test": "brunch test"
   },
   "dependencies": {
-    "auto-reload-brunch": ">= 1.0 < 1.8",
-    "clean-css-brunch": ">= 1.0 < 1.8",
+    "javascript-brunch": ">= 1.0 < 1.8",
     "coffee-script-brunch": ">= 1.0 < 1.8",
     "css-brunch": ">= 1.0 < 1.8",
-    "jade-brunch": ">=1.0 < 1.9",
-    "javascript-brunch": ">= 1.0 < 1.8",
-    "static-jade-brunch": ">=1.0 < 1.8",
     "stylus-brunch": ">= 1.0 < 1.8",
-    "uglify-js-brunch": ">= 1.0 < 1.8"
-  }
+    "handlebars-brunch": ">= 1.0 < 1.8",
+    "auto-reload-brunch": "~1.6.5",
+    "uglify-js-brunch": ">= 1.0 < 1.8",
+    "clean-css-brunch": ">= 1.0 < 1.8",
+    "eco-brunch": "~1.7.1",
+    "coffeelint-brunch": "~1.5.0",
+    "underscore": "~1.6.0"
+  },
+  "devDependencies": {}
 }
