--- a/app/front/nginx/tech_dict.conf
+++ b/app/front/nginx/tech_dict.conf
@@ -3,7 +3,7 @@ upstream django {
 }
 server {
     listen 80;
-    server_name www.api.tect_dict.com;
+    server_name api.tect_dict.com.cn;
     charset     utf-8;
     client_max_body_size 50M;
 
@@ -35,10 +35,12 @@ server {
     root /opt/TechDict_front/public;
 
     location /static {
-        proxy_pass http://www.api.tect_dict.com;
+        #proxy_pass http://www.api.tect_dict.com;
+        proxy_pass http://api.tect_dict.com.cn;
     }
 
     location /api {
-        proxy_pass http://www.api.tect_dict.com;
+        # proxy_pass http://www.api.tect_dict.com;
+        proxy_pass http://api.tect_dict.com.cn;
     }
 }
