--- a/app/front/package.json
+++ b/app/front/package.json
@@ -13,16 +13,17 @@
     "test": "brunch test"
   },
   "dependencies": {
-    "javascript-brunch": ">= 1.0 < 1.8",
-    "coffee-script-brunch": ">= 1.0 < 1.8",
-    "css-brunch": ">= 1.0 < 1.8",
-    "stylus-brunch": ">= 1.0 < 1.8",
-    "handlebars-brunch": ">= 1.0 < 1.8",
     "auto-reload-brunch": "~1.6.5",
-    "uglify-js-brunch": ">= 1.0 < 1.8",
     "clean-css-brunch": ">= 1.0 < 1.8",
-    "eco-brunch": "~1.7.1",
+    "coffee-script-brunch": ">= 1.0 < 1.8",
     "coffeelint-brunch": "~1.5.0",
+    "css-brunch": ">= 1.0 < 1.8",
+    "d3.layout.cloud": "^1.0.5",
+    "eco-brunch": "~1.7.1",
+    "handlebars-brunch": ">= 1.0 < 1.8",
+    "javascript-brunch": ">= 1.0 < 1.8",
+    "stylus-brunch": ">= 1.0 < 1.8",
+    "uglify-js-brunch": ">= 1.0 < 1.8",
     "underscore": "~1.6.0"
   },
   "devDependencies": {}
