--- a/app/front/nginx/tech_dict.conf
+++ b/app/front/nginx/tech_dict.conf
@@ -43,4 +43,10 @@ server {
         # proxy_pass http://www.api.tect_dict.com;
         proxy_pass http://api.tect_dict.com.cn;
     }
+
+    location / {
+       if (!-e $request_filename){
+          rewrite ^(.*)$ /index.html break;
+    }
+}
 }
