--- a/app/front/bower.json
+++ b/app/front/bower.json
@@ -11,7 +11,8 @@
     "h5bp-helpers": "~0.1.0",
     "jquery-mockjax": "~1.5.0",
     "moment": "~2.1.0",
-    "pure": "~0.4.2"
+    "pure": "~0.4.2",
+    "vex": "~2.1.1"
   },
   "overrides": {
     "backbone": {
