edit 61 online conf

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -16,9 +16,12 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix://%(here)s/supervisor.sock
 
-[program:supervisor_django]
-command=/opt/python_env/django1.6.1/bin/gunicorn -c /opt/TechDict/app/gunicorn/gunicorn_config.py tech_dict.wsgi
+[program:tech_dict]
+command=/opt/python_env/django1.6.1/bin/gunicorn --pythonpath /opt/python_env/django1.6.1/bin  -c /opt/TechDict/app/gunicorn/gunicorn_config.py tech_dict.wsgi
+user=deployer
 autostart=true
 autorestart=true
+startsecs=3
 stderr_logfile=/opt/TechDict/app/tech_dict/log/err.log
 stdout_logfile=/opt/TechDict/app/tech_dict/log/out.log
+exitcodes=1
