fix supervisord config bug

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -17,11 +17,11 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix://%(here)s/supervisor.sock
 
 [program:tech_dict]
-command=/opt/python_env/django1.6.1/bin/gunicorn --pythonpath /opt/python_env/django1.6.1/bin  -c /opt/TechDict/app/gunicorn/gunicorn_config.py tech_dict.wsgi
+command=/opt/python_env/django1.6.1/bin/gunicorn --pythonpath /opt/python_env/django1.6.1/bin  -c /opt/TechDict/gunicorn/gunicorn_config.py tech_dict.wsgi
 user=deployer
 autostart=true
 autorestart=true
 startsecs=3
 stderr_logfile=/opt/TechDict/app/tech_dict/log/err.log
 stdout_logfile=/opt/TechDict/app/tech_dict/log/out.log
-exitcodes=1
+redirect_stderr=true
