edit nginx and app api config

--- a/app/front/nginx/tech_dict.conf
+++ b/app/front/nginx/tech_dict.conf
@@ -2,8 +2,8 @@ upstream django {
     server 127.0.0.1:8000;
 }
 server {
-    listen 80;
-    server_name api.tect_dict.com.cn;
+    listen 8100;
+    server_name 115.28.11.182;
     charset     utf-8;
     client_max_body_size 50M;
 
@@ -28,21 +28,12 @@ server {
     }
 }
 server {
-    listen 80;
+    listen 8001;
     client_max_body_size 4G;
-    server_name test.tect_dict.com.cn;
+    #server_name test.tect_dict.com.cn;
+    server_name 115.28.11.182;
     index index.html index.htm;
     root /opt/TechDict_front/public;
-
-    location /static {
-        #proxy_pass http://www.api.tect_dict.com;
-        proxy_pass http://api.tect_dict.com.cn;
-    }
-
-    location /api {
-        # proxy_pass http://www.api.tect_dict.com;
-        proxy_pass http://api.tect_dict.com.cn;
-    }
 
     location / {
        if (!-e $request_filename){
